--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "netlify dev",
-    "start": "eleventy --serve --port=8080",
-    "build": "eleventy",
+    "start": "npm-run-all -p start:css start:11ty",
+    "start:11ty": "eleventy --serve --port=8080",
+    "start:css": "postcss src/styles/tailwind.css -o _site/styles/main.css --watch",
+    "build": "npm-run-all build:css build:11ty",
+    "build:css": "postcss src/styles/tailwind.css -o _site/styles/main.css",
+    "build:11ty": "eleventy",
     "format": "prettier -w .",
     "lint": "eslint .",
     "test": "vitest run",
@@ -16,15 +20,22 @@
   "devDependencies": {
     "@11ty/eleventy": "^3.0.0",
     "@netlify/functions": "^2.0.2",
+    "@tailwindcss/forms": "^0.5.9",
+    "@tailwindcss/typography": "^0.5.15",
     "@types/cookie": "^0.6.0",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.12.7",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.9.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-simple-import-sort": "^12.1.0",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.47",
+    "postcss-cli": "^11.0.1",
     "prettier": "^3.3.3",
+    "tailwindcss": "^3.4.12",
     "tsx": "^4.16.2",
     "typescript": "^5.6.2",
     "vitest": "^2.0.5"
